# jakewray.dev

./: .dockerignore  .env  .env.example  .envrc  .gitignore  Caddyfile  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  backend_check.txt  bulk_extract.py  cargo.toml  check_output.txt  cleanup_imports.py  cleanup_journalism.py  cleanup_noise.py  debug_caption.html  debug_extraction.py  debug_pdf_layout.py  deploy_gcp.sh  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  dockerfile  dump_pdf_text.py  extract_upload_pdf_images.py  flake.nix  import_candidates.py  import_pdfs.py  inspect_layout.py  jakewray.dev.md  logfile  manual_import.py  matches.txt  migrate_images.py  migrate_journalism.py  nginx.conf  (+10 more)
.github/workflows/: ci.yml  claude.yml  docker.yml  security.yml  typos.yml
.sass-cache/80caea1436c819853a0f08313b8155a0e2f3150d/: main.scssc
assets/: hydration_shim.js
backend/: Cargo.toml  cargo.toml
backend/src/: main.rs  state.rs
backend/src/api/: admin.rs  mod.rs  public.rs
data/articles/: 12-year-old-terrace-boy-missing.json  20-new-homes-to-be-built-in-lake-babine-nation.json  2020-virtual-all-candidates-forum-to-take-place-wednesday-oct-14.json  79th-annual-lakes-district-fall-fair-to-feature-nu.json  agriculture-expert-talks-northwest-food-security.json  alcohol-consumption-in-northwest-bc-soars-above-.json  alcohol-consumption-in-northwest-bc-soars-above-provincial-average.json  anti-racism-demonstration-held-in-terrace.json  ao4-wednesdapy-octobeir-2n025-ion.json  bc-energy-regulator-outlines-new-role-to-rdbn-boar.json  burns-lake-advocates-for-rural-healthcare-at-ubcm-.json  burns-lake-community-garden-planning-open-house.json  burns-lake-er-closes-at-least-8-times-in-june.json  burns-lake-rockers-to-shred-at-light-up-the-lake-f.json  burns-lake-students-raise-and-release-salmon-fry-i.json  burns-lake-tire-change-hires-healthcare-over-recru.json  burns-lake-trade-show-draws-nearly-2000-attendees.json  burns-lake-trade-show.json  burns-lake-youth-services-centre-set-to-open-oct-.json  canadian-echo-chambers.json  candidates-spar-over-healthcare-at-burns-lake-all-candidates-forum.json  cheslatta-carrier-nation-celebrates-opening-of-new.json  city-council-considers-easing-food-truck-restriction.json  city-increasing-maximum-business-license-fine.json  city-of-orders-hazardous-material-cleanup-at-derel.json  city-of-terrace-considers-reopening-playgrounds-day-camps.json  climbing-society-seeks-funds-for-new-bouldering-gy.json  closing-of-the-woodland-bakery.json  community-builders.json  company-nearly-ready-to-tap-geothermal-energy-near-terrace.json  conservation-officers-kill-black-bear-near-terrace.json  conservation-officers-relocate-spirit-bear-known-to-roam-northwestern-b-c.json  conservative-ellis-ross-elected-mp-for-skeena-bulk.json  conservative-parties-merge-after-referendum.json  construction-of-bc-hydros-north-coast-transmissio.json  council-briefs-court-watch-loses-momentum.json  council-poses-questions-to-rcmp-inspector.json  council-supports-proposed-nisgaa-health-clinic-in-terrace.json  council-votes-to-remove-heritage-status-from-kin-h.json  derelict-apartment-building-on-sparks-street-to-be.json  (+138 more)
docs/: AUTH_IMPLEMENTATION.md  DEPLOYMENT.md  LOCAL_DEV.md  SETUP_ADMIN.md  TIMEOUT_FIX_SUMMARY.md  deployment.md  timeout_fix_summary.md  to_fetch.md
frontend/: Cargo.toml  cargo.toml
frontend/src/: app.rs  lib.rs
frontend/src/api/: articles.rs
frontend/src/components/: footer.rs  media_picker.rs  mod.rs  navbar.rs
frontend/src/data/: journalism.json  journalism.rs
frontend/src/pages/: about.rs  contact.rs  mod.rs  sections.rs  setup.rs
frontend/src/pages/admin/: composer.rs  dashboard.rs  login.rs  mod.rs  password_change.rs  sync_manager.rs
hgen/: Cargo.toml
hgen/src/: main.rs
migration/: Cargo.toml  cargo.toml
migration/src/: main.rs
migrations/: 20260110000000_initial_schema.sql  20260210120000_seed_admin_password.sql  20260319000000_add_published_at_indexes.sql  20260325000000_add_updated_at.sql  20260325000001_normalize_timestamps.sql  20260325000002_add_updated_at_triggers.sql  20260325000003_add_published_at_check.sql
nginx/: nginx.conf  nginx_http_only.conf
scripts/: deploy.sh  init_certbot.sh  init_infra.sh  init_ssl.sh  install_compose_plugin.sh  remote_build.sh  remote_setup.sh  run_db.sh  setup-dev.sh
shared/: Cargo.toml  cargo.toml
shared/src/: auth.rs  lib.rs
style/: main.scss
