[workspace]
resolver = "2"
members = ["frontend", "backend", "shared", "migration"]

[workspace.dependencies]
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_axum = { version = "0.7" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
tracing = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
