[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.15"
axum-extra = { workspace = true, features = [
  "cookie-signed",
  "cookie-private",
] }
shared = { path = "../shared" }
leptos = { workspace = true, features = ["ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
wasm-bindgen = { workspace = true }
frontend = { path = "../frontend" }

[features]
default = []
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "frontend/ssr"]
