[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
tracing = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Storage"], optional = true }
gloo-net = { version = "0.6", features = ["json"], optional = true }

[features]
default = ["hydrate"]
hydrate = [
	"leptos/hydrate",
	"wasm-bindgen",
	"console_error_panic_hook",
	"web-sys",
	"gloo-net",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
