[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
once_cell = "1.20"
jsonwebtoken = { version = "9.2", optional = true }
walkdir = { version = "2.5", optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlInputElement", "FileList", "File", "Blob"] }
gloo-net = { version = "0.6", features = ["json"] }
gloo-file = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:chrono",
    "dep:jsonwebtoken", 
    "dep:walkdir"
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
